Fix checkstyle complaint